# Pangolin

./: .dockerignore  .gitignore  Dockerfile  PangolinColab.ipynb  README.md  prepare-refs.sh  pyproject.toml  requirements.txt  setup.py
examples/: brca.csv  brca.vcf
pangolin/: pangolin.py
service/: Dockerfile  Makefile  README.md  requirements.txt  server.py  service.backup_copy.yaml  sha256.txt
