[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pangolin_bp"
dynamic = ["version"]
authors = [
    {name = "Tony Zeng", email = "tkyzeng@gmail.com" },
    {name = "Bradford Powell", email = "bpow@drpowell.org" },
]
requires-python = ">=3.9"
description = "Pangolin splice prediction tool"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "gffutils==0.13",
    "pysam==0.22.1",
    "numpy==2.0.1",
    "torch==2.4.0",
]

[project.scripts]
pangolin = "pangolin.pangolin:main"

[tool.setuptools]
script-files = ["scripts/create_gffutils_db.py", "scripts/custom_pangolin_usage.py"]
packages = ['pangolin']

[tool.setuptools_scm]

[tool.setuptools.package-data]
pangolin = ["models/*"]